--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
             <source src="videos/homepageStrategy.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>Strategy</h3>
-            <p>Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
-          </div>
+            <h3 class="text-header">Strategy</h3>
+            <p class="text-content">Our process starts with strategic anchoring, grasping clients' goals, user needs, and evaluating current products and usage data.</p>
         </article>
 
         <article>
@@ -74,10 +72,8 @@
             <source src="videos/homepageDesign.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>Design</h3>
-            <p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
-          </div>
+            <h3 class="text-header">Design</h3>
+            <p class="text-content">Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
         </article>
 
         <article>
@@ -85,10 +81,8 @@
             <source src="videos/homepageBrand.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>Brand</h3>
-            <p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
-          </div>
+            <h3 class="text-header">Brand</h3>
+            <p class="text-content">At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
         </article>
 
         <article>
@@ -96,10 +90,8 @@
             <source src="videos/homepageTechnology.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>Technology</h3>
-            <p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
-          </div>
+            <h3 class="text-header">Technology</h3>
+            <p class="text-content">Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
         </article>
       </section>
 
@@ -126,7 +118,7 @@
       </section>
 
       <section class="industries">
-        <article class="industries-a">
+        <article class="industries-article">
           <ol class="industries-list">
             <li>
               <h4>50+</h4>
@@ -278,40 +270,32 @@
             <source src="videos/homepageWeScale.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>We scale</h3>
-            <p>We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
-          </div>
+            <h3 class="text-header">We scale</h3>
+            <p class="text-content">We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
         </article>
         <article>
           <video title="A compass." poster="images/weExplore.jpg" loop playsinline controls>
             <source src="videos/homepageWeExplore.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>We explore</h3>
-            <p>We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
-          </div>
+            <h3 class="text-header">We explore</h3>
+            <p class="text-content">We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
         </article>
         <article>
           <video title="Journey of multiple steps in a process of a project." poster="images/weExecute.jpg" loop playsinline controls>
             <source src="videos/homepageWeExecute.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>We execute</h3>
-            <p>We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
-          </div>
+            <h3 class="text-header">We execute</h3>
+            <p class="text-content">We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
         </article>
         <article>
           <video title="Different geometric objects being combined into one." poster="images/weIterate.jpg" loop playsinline controls>
             <source src="videos/homepageWeIterate.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
-          <div class="text-content">
-            <h3>We iterate</h3>
-            <p>We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
-          </div>
+            <h3 class="text-header">We iterate</h3>
+            <p class="text-content">We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
         </article>
       </section>
 
