fix live server?

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <title>More Air</title>
 
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="./styles/style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a id="logo" href="index.html"><img src="images/logoBlack.svg" alt="Logo More Air." /></a>
+        <a id="logo" href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
 
         <input id="toggle" type="checkbox" aria-hidden="true" />
         <label class="hamburger" for="toggle" aria-hidden="true">
@@ -52,8 +52,8 @@
         </button>
       </div>
 
-      <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="images/posterVideoHome.jpg" loop playsinline controls>
-        <source src="videos/homepageStart.mp4" type="video/mp4" />
+      <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="./images/posterVideoHome.jpg" loop playsinline controls>
+        <source src="./videos/homepageStart.mp4" type="video/mp4" />
         Your browser does not support the video.
       </video>
 
