--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
       <section>
         <article>
-          <video title="The process of a project." poster="images/posterStrategy.jpg" loop playsinline muted controls>
-            <source src="videos/homepageStrategy.mp4" type="video/mp4" />
+          <video title="The process of a project." poster="./images/posterStrategy.jpg" loop playsinline muted controls>
+            <source src="./videos/homepageStrategy.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">Strategy</h3>
