--- a/work.html
+++ b/work.html
@@ -7,14 +7,14 @@
 
     <title>Cobot Brand System</title>
 
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="./styles/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format">
   </head>
 
   <body>
     <header>
       <nav>
-        <a id="logo" href="index.html"><img src="/images/logoBlack.svg" alt="Logo More Air." /></a>
+        <a id="logo" href="index.html"><img src="./images/logoBlack.svg" alt="Logo More Air." /></a>
 
         <input id="toggle" type="checkbox" aria-hidden="true">
         <label class="hamburger" for="toggle" aria-hidden="true">
@@ -51,7 +51,7 @@
           </svg>
         </button>
       </div>
-      <img src="/images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website.">
+      <img src="./images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website.">
 
       <section class="cobot-section">
         <h2>Cobot, defining the future of robot interaction</h2>
@@ -61,8 +61,8 @@
           unicorn status.
         </p>
         <div class="media-container">
-          <img src="/images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primary colors, and icons.">
-          <img src="/images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery, and motion.">
+          <img src="./images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primary colors, and icons.">
+          <img src="./images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery, and motion.">
         </div>
         <video title="Abstract lines crossing in circles." poster="/images/cobotCircleLines.jpg" loop playsinline controls>
           <source src="/videos/cobotStart.mp4" type="video/mp4" />
