fixed live server

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>More Air</title>
 
     <link href="./styles/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format" />
+    <link rel="icon" type="image/png" href="https://cdn.sanity.io/./images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format" />
   </head>
 
   <body>
@@ -53,14 +53,14 @@
       </div>
 
       <video id="firstVideo" title="A quick rundown of all sorts of applications that we made." poster="./images/posterVideoHome.jpg" loop playsinline controls>
-        <source src="./videos/homepageStart.mp4" type="video/mp4" />
+        <source src="./video/homepageStart.mp4" type="video/mp4" />
         Your browser does not support the video.
       </video>
 
       <section>
         <article>
           <video title="The process of a project." poster="./images/posterStrategy.jpg" loop playsinline muted controls>
-            <source src="./videos/homepageStrategy.mp4" type="video/mp4" />
+            <source src="./video/homepageStrategy.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">Strategy</h3>
@@ -68,8 +68,8 @@
         </article>
 
         <article>
-          <video title="Different software on different devices." poster="images/posterDesign.jpg" loop playsinline muted controls>
-            <source src="videos/homepageDesign.mp4" type="video/mp4" />
+          <video title="Different software on different devices." poster="./images/posterDesign.jpg" loop playsinline muted controls>
+            <source src="./video/homepageDesign.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">Design</h3>
@@ -77,8 +77,8 @@
         </article>
 
         <article>
-          <video title="Fonts, colors and icons." poster="images/posterBrand.jpg" loop playsinline controls>
-            <source src="videos/homepageBrand.mp4" type="video/mp4" />
+          <video title="Fonts, colors and icons." poster="./images/posterBrand.jpg" loop playsinline controls>
+            <source src="./video/homepageBrand.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">Brand</h3>
@@ -86,8 +86,8 @@
         </article>
 
         <article>
-          <video title="Different prompts for AI." poster="images/posterTechnology.jpg" loop playsinline controls>
-            <source src="videos/homepageTechnology.mp4" type="video/mp4" />
+          <video title="Different prompts for AI." poster="./images/posterTechnology.jpg" loop playsinline controls>
+            <source src="./video/homepageTechnology.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">Technology</h3>
@@ -139,18 +139,18 @@
       <section>
         <h2 class="brands">Brands</h2>
         <article class="brands-logos">
-          <img src="images/sky.svg" alt="Logo of Sky" />
-          <img src="images/axa.svg" alt="Logo of Axa" />
-          <img src="images/virgin.svg" alt="Logo of Virgin" />
-          <img src="images/ford.svg" alt="Logo of Ford" />
-          <img src="images/nissan.svg" alt="Logo of Nissan" />
-          <img src="images/volkswagen.svg" alt="Logo of Volkswagen" />
-          <img src="images/nokia.svg" alt="Logo of Nokia" />
-          <img src="images/apple.svg" alt="Logo of Apple" />
-          <img src="images/audi.svg" alt="Logo of Audi" />
-          <img src="images/nike.svg" alt="Logo of Nike" />
-          <img src="images/fujitsu.svg" alt="Logo of Fujitsu" />
-          <img src="images/bbc.svg" alt="Logo of BBC" />
+          <img src="./images/sky.svg" alt="Logo of Sky" />
+          <img src="./images/axa.svg" alt="Logo of Axa" />
+          <img src="./images/virgin.svg" alt="Logo of Virgin" />
+          <img src="./images/ford.svg" alt="Logo of Ford" />
+          <img src="./images/nissan.svg" alt="Logo of Nissan" />
+          <img src="./images/volkswagen.svg" alt="Logo of Volkswagen" />
+          <img src="./images/nokia.svg" alt="Logo of Nokia" />
+          <img src="./images/apple.svg" alt="Logo of Apple" />
+          <img src="./images/audi.svg" alt="Logo of Audi" />
+          <img src="./images/nike.svg" alt="Logo of Nike" />
+          <img src="./images/fujitsu.svg" alt="Logo of Fujitsu" />
+          <img src="./images/bbc.svg" alt="Logo of BBC" />
         </article>
 
         <article class="carousel-wrapper">
@@ -215,10 +215,10 @@
             <p>We're grateful that our work has been recognised through many international design awards over the years.</p>
           </div>
           <div class="awards-images">
-            <img src="images/goodDesignAward.png" alt="Logo of good design award" />
-            <img src="images/reddotWinner.png" alt="Logo of reddot winner" />
-            <img src="images/internationalDesignExcellenceAwards.png" alt="Logo of international design excellence awards" />
-            <img src="images/designAward.png" alt="Logo of design award" />
+            <img src="./images/goodDesignAward.png" alt="Logo of good design award" />
+            <img src="./images/reddotWinner.png" alt="Logo of reddot winner" />
+            <img src="./images/internationalDesignExcellenceAwards.png" alt="Logo of international design excellence awards" />
+            <img src="./images/designAward.png" alt="Logo of design award" />
           </div>
         </article>
       </section>
@@ -227,12 +227,12 @@
         <h2>Recent work</h2>
         <ol>
           <li>
-            <img src="images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website." />
+            <img src="./images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website." />
             <h3>Cobot Brand System</h3>
             <p>A new kind of robotics</p>
           </li>
           <li>
-            <img src="images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo." />
+            <img src="./images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo." />
             <h3>
               Nokia Pure Design System
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -243,12 +243,12 @@
             <p>Flexible future-proof design</p>
           </li>
           <li>
-            <img src="images/nokiaSmartLightning.jpg" alt="Phone displaying the Nokia Smart Lightning app." />
+            <img src="./images/nokiaSmartLightning.jpg" alt="Phone displaying the Nokia Smart Lightning app." />
             <h3>Nokia Smart Lightning</h3>
             <p>Smart home minimalism</p>
           </li>
           <li>
-            <img src="images/smartCarExperience.jpg" alt="Car inside of a dark grey, abstract surrounding." />
+            <img src="./images/smartCarExperience.jpg" alt="Car inside of a dark grey, abstract surrounding." />
             <h3>
               Smart Car Experience
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -266,32 +266,32 @@
 
       <section>
         <article>
-          <video title="Multiple people working in the same digital workspace." poster="images/weScale.jpg" loop playsinline controls>
-            <source src="videos/homepageWeScale.mp4" type="video/mp4" />
+          <video title="Multiple people working in the same digital workspace." poster="./images/weScale.jpg" loop playsinline controls>
+            <source src="./video/homepageWeScale.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">We scale</h3>
             <p class="text-content">We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
         </article>
         <article>
-          <video title="A compass." poster="images/weExplore.jpg" loop playsinline controls>
-            <source src="videos/homepageWeExplore.mp4" type="video/mp4" />
+          <video title="A compass." poster="./images/weExplore.jpg" loop playsinline controls>
+            <source src="./video/homepageWeExplore.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">We explore</h3>
             <p class="text-content">We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
         </article>
         <article>
-          <video title="Journey of multiple steps in a process of a project." poster="images/weExecute.jpg" loop playsinline controls>
-            <source src="videos/homepageWeExecute.mp4" type="video/mp4" />
+          <video title="Journey of multiple steps in a process of a project." poster="./images/weExecute.jpg" loop playsinline controls>
+            <source src="./video/homepageWeExecute.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">We execute</h3>
             <p class="text-content">We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
         </article>
         <article>
-          <video title="Different geometric objects being combined into one." poster="images/weIterate.jpg" loop playsinline controls>
-            <source src="videos/homepageWeIterate.mp4" type="video/mp4" />
+          <video title="Different geometric objects being combined into one." poster="./images/weIterate.jpg" loop playsinline controls>
+            <source src="./video/homepageWeIterate.mp4" type="video/mp4" />
             Your browser does not support the video.
           </video>
             <h3 class="text-header">We iterate</h3>
@@ -303,21 +303,21 @@
         <h2>Meet Our Team</h2>
         <ol class="team-list">
           <li>
-            <img src="images/tomVining.jpg" alt="A picture of Tom Vining" />
+            <img src="./images/tomVining.jpg" alt="A picture of Tom Vining" />
             <h3>Tom Vining</h3>
             <h4>Co-Founder</h4>
             <p>With 2 decades in design, Tom has led, mentored, and designed for top global brands, creating timeless products with his refined design style.</p>
             <a href="#">LinkedIn</a>
           </li>
           <li>
-            <img src="images/riekoMaeda.jpg" alt="A picture of Rieko Maeda" />
+            <img src="./images/riekoMaeda.jpg" alt="A picture of Rieko Maeda" />
             <h3>Rieko Maeda</h3>
             <h4>Co-Founder</h4>
             <p>Blending business savvy with creative flair, Rieko elevates all of our design initiatives with industry insights, artistic talent and fresh ideas.</p>
             <a href="#">LinkedIn</a>
           </li>
           <li>
-            <img src="images/specialists.gif" alt="Circle with white dots around it." />
+            <img src="./images/specialists.gif" alt="Circle with white dots around it." />
             <h3>Specialists</h3>
             <h4>Talent Network</h4>
             <p>We have a strong network of talent across disciplines at More Air, tailored to meet specific project needs and ensure our clients get the best results.</p>
