--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <title>Cobot Brand System</title>
 
     <link href="./styles/style.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format">
+    <link rel="icon" type="image/png" href="https://cdn.sanity.io/./images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format">
   </head>
 
   <body>
@@ -64,8 +64,8 @@
           <img src="./images/logoStatusbarColourIcons.jpg" alt="The logo, status bar, primary colors, and icons.">
           <img src="./images/symbolTypographyImageryMotion.jpg" alt="The symbol, typography, imagery, and motion.">
         </div>
-        <video title="Abstract lines crossing in circles." poster="/images/cobotCircleLines.jpg" loop playsinline controls>
-          <source src="/videos/cobotStart.mp4" type="video/mp4" />
+        <video title="Abstract lines crossing in circles." poster="./images/cobotCircleLines.jpg" loop playsinline controls>
+          <source src="./video/cobotStart.mp4" type="video/mp4" />
         </video>
       </section>      
 
@@ -76,18 +76,18 @@
           their core values which are Listen, Trust, Contribute, Empower, and Reflect. We developed a modern logo that symbolizes the synergy and trust between humans and robots, alongside vibrant,
           dynamic colours balanced with neutral tones, that convey adaptability and trustworthiness.
         </p>
-        <video title="Black and White namelogo of Cobot." poster="/images/cobotLogoBlack.jpg" loop playsinline controls>
-          <source src="/videos/cobotLogo1.mp4" type="video/mp4" />
+        <video title="Black and White namelogo of Cobot." poster="./images/cobotLogoBlack.jpg" loop playsinline controls>
+          <source src="./video/cobotLogo1.mp4" type="video/mp4" />
         </video>
         <div class="media-container">
-          <img src="/images/cobotLogoColour.jpg" alt="Color namelogo of Cobot.">
-          <img src="/images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot.">
+          <img src="./images/cobotLogoColour.jpg" alt="Color namelogo of Cobot.">
+          <img src="./images/cobotLogoBlack2.jpg" alt="Different variations of the namelogo of Cobot.">
           <div class="video-pair">
-            <video title="A black and white animated smile (the logo)." poster="images/smileyBlack.jpg" loop playsinline controls>
-              <source src="/videos/cobotSmiley1.mp4" type="video/mp4">
+            <video title="A black and white animated smile (the logo)." poster="./images/smileyBlack.jpg" loop playsinline controls>
+              <source src="./video/cobotSmiley1.mp4" type="video/mp4">
             </video>
-            <video title="A coloured, animated smile (the logo)." poster="images/smiley.jpg" loop playsinline controls>
-              <source src="/videos/cobotSmiley2.mp4" type="video/mp4">
+            <video title="A coloured, animated smile (the logo)." poster="./images/smiley.jpg" loop playsinline controls>
+              <source src="./video/cobotSmiley2.mp4" type="video/mp4">
             </video>
           </div>
         </div>
@@ -101,15 +101,15 @@
           sans-serif fonts for readability and a contemporary feel. We explored using expressions based on the Cobot logo to create a friendly and more approachable feel.
         </p>
         <div class="media-container">
-          <img src="images/colourwheel.jpg" alt="Colorwheel." />
-          <img src="images/colourPalette.jpg" alt="Color palette." />
-          <video title="The app icon." poster="images/iconPosterColourful.jpg" loop playsinline controls>
-            <source src="videos/cobotLogo2.mp4" type="video/mp4" />
+          <img src="./images/colourwheel.jpg" alt="Colorwheel." />
+          <img src="./images/colourPalette.jpg" alt="Color palette." />
+          <video title="The app icon." poster="./images/iconPosterColourful.jpg" loop playsinline controls>
+            <source src="./video/cobotLogo2.mp4" type="video/mp4" />
           </video>
-          <img src="images/iconNature.jpg" alt="The app icon with a background with nature." />
+          <img src="./images/iconNature.jpg" alt="The app icon with a background with nature." />
         </div>
-        <video title="The brand guidelines and choices made along the way regarding branding." poster="images/posterBlank.jpg" loop playsinline controls>
-          <source src="videos/cobotLogo3.mp4" type="video/mp4" />
+        <video title="The brand guidelines and choices made along the way regarding branding." poster="./images/posterBlank.jpg" loop playsinline controls>
+          <source src="./video/cobotLogo3.mp4" type="video/mp4" />
         </video>
       </section>
 
@@ -121,16 +121,16 @@
           incorporate feedback and ensure alignment with their core values.
         </p>
         <div class="media-container">
-          <img src="images/icons1.jpg" alt="Icons." />
-          <img src="images/icons2.jpg" alt="Icons." />
+          <img src="./images/icons1.jpg" alt="Icons." />
+          <img src="./images/icons2.jpg" alt="Icons." />
         </div>
-        <video title="Black and white, animated icons." poster="images/iconsBlack.jpg" loop playsinline controls>
-          <source src="videos/cobotLogo4.mp4" type="video/mp4" />
+        <video title="Black and white, animated icons." poster="./images/iconsBlack.jpg" loop playsinline controls>
+          <source src="./video/cobotLogo4.mp4" type="video/mp4" />
         </video>
-        <img src="images/iconsGuideline.jpg" alt="Guidelines regarding the icons." />
+        <img src="./images/iconsGuideline.jpg" alt="Guidelines regarding the icons." />
         <div class="media-container">
-          <img src="images/iconsTryOut.jpg" alt="Look of icons on the website." />
-          <img src="images/buttonTryOut.jpg" alt="Look of how the button will be used in the website." />
+          <img src="./images/iconsTryOut.jpg" alt="Look of icons on the website." />
+          <img src="./images/buttonTryOut.jpg" alt="Look of how the button will be used in the website." />
         </div>
       </section>
 
@@ -141,32 +141,32 @@
           accurately coincide with media coverage. We helped to increase brand recognition and enhance visibility within the industry, while helping to create a modern, professional image reinforcing
           their leadership in robotics innovation. Stakeholders and audiences responded positively, noting the alignment with the company’s vision and core values.
         </p>
-        <video title="Interaction on a phone." poster="images/PhoneInteraction.jpg" loop playsinline controls>
-          <source src="videos/cobotPhoneDemo.mp4" type="video/mp4" />
+        <video title="Interaction on a phone." poster="./images/PhoneInteraction.jpg" loop playsinline controls>
+          <source src="./video/cobotPhoneDemo.mp4" type="video/mp4" />
         </video>
-        <img src="images/websiteTryOut.jpg" alt="Website in dark mode." />
-        <img src="images/websiteTryOut2.jpg" alt="Website in light mode." />
+        <img src="./images/websiteTryOut.jpg" alt="Website in dark mode." />
+        <img src="./images/websiteTryOut2.jpg" alt="Website in light mode." />
       </section>
 
       <section class="quote">
         <p>“More Air's exceptional service in branding and website development significantly enhanced our online presence, crucial for our successful Series A announcement.”</p>
         <h3>Brad Porter</h3>
         <h4>Founder & CEO, Cobot</h4>
-        <img src="images/billboard.jpg" alt="Website on a billboard." />
-        <img src="images/instagramTryOut.jpg" alt="Advertisements on Instagram." />
-        <img src="images/shirt.jpg" alt="Logo on a t-shirt." />
+        <img src="./images/billboard.jpg" alt="Website on a billboard." />
+        <img src="./images/instagramTryOut.jpg" alt="Advertisements on Instagram." />
+        <img src="./images/shirt.jpg" alt="Logo on a t-shirt." />
       </section>
 
       <section>
         <h2>More work</h2>
         <ol>
           <li>
-            <img src="images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo." />
+            <img src="./images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo." />
             <h3>Nokia Pure Design System</h3>
             <p>Flexible future-proof design</p>
           </li>
           <li>
-            <img src="images/nokiaSmartLightning.jpg" alt="Phone displaying the Nokia Smart Lightning app." />
+            <img src="./images/nokiaSmartLightning.jpg" alt="Phone displaying the Nokia Smart Lightning app." />
             <h3>Nokia Smart Lightning</h3>
             <p>Smart home minimalism</p>
           </li>
